@@ -1,19 +1,0 @@
-# Drop all Requires, Obsoletes, and Provides statements in here
-Provides: pupmod-simp-logstash
-Obsoletes: pupmod-simp-logstash < 2.0.0
-Requires: pupmod-elastic-logstash >= 5.2.1
-Requires: pupmod-elastic-logstash < 6.0.0
-Requires: pupmod-puppetlabs-java >= 1.2.0
-Requires: pupmod-puppetlabs-java < 2.0.0
-Requires: pupmod-puppetlabs-stdlib >= 4.13.1
-Requires: pupmod-puppetlabs-stdlib < 5.0.0
-Requires: pupmod-simp-iptables < 7.0.0-0
-Requires: pupmod-simp-iptables >= 6.0.0-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
-Requires: pupmod-simp-simplib < 4.0.0-0
-Requires: pupmod-simp-stunnel >= 6.0.0-0
-Requires: pupmod-simp-stunnel < 7.0.0-0
-Requires: pupmod-herculesteam-augeasproviders_sysctl < 3.0.0-0
-Requires: pupmod-herculesteam-augeasproviders_sysctl >= 2.1.0-0
-Requires: pupmod-simp-tcpwrappers >= 6.0.0-0
-Requires: pupmod-simp-tcpwrappers < 7.0.0-0
